--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,9 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.31.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "morgan": "~1.9.1"
