--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,27 @@
 version: "3.8"
-services: 
-  frontend: 
+services:
+  frontend:
     build: ./client
-    ports: 
-      - 3000:3000
+    ports:
+      - "3000:3000"
     depends_on:
       - backend
   backend:
     build: ./api
     ports:
-      - 3001:3001
+      - "3001:3001"
     environment:
-      DB_URL: mongodb://db/projeto
+      DB_URL: postgresql://postgres:admin@db:5432/projeto
     depends_on:
       - db
   db:
-    image: mongo:latest
-    ports: 
-      - 9000:27017
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: projeto
     volumes:
-      - projeto:/data/db
-volumes:
-  projeto: 
+      - ./projeto.sql:/docker-entrypoint-initdb.d/projeto.sql
+
