--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,77 @@
-version: "3.8"
+# version: "3.9"
+# services:
+#   frontend:
+#     build: ./client
+#     ports:
+#       - "3000:3000"
+#     depends_on:
+#       - backend
+#   backend:
+#     build: ./api
+#     ports:
+#       - "3001:3001"
+#     environment:
+#       DB_URL: postgresql://postgres:admin@db:5432/projeto
+#     depends_on:
+#       - db
+#   db:
+#     build: .
+#     ports:
+#       - "5432:5432"
+#     environment:
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: admin
+#       POSTGRES_DB: projeto
+
+# version: '3'
+
+# services:
+#   db:
+#     image: postgres:latest
+#     environment:
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: admin
+#       POSTGRES_DB: projeto
+#     volumes:
+#       - postgres-data:/var/lib/postgresql/data
+#     ports:
+#       - "5432:5432"
+#     restart: always
+
+#   backend:
+#     build: ./api
+#     depends_on:
+#       - db
+#     environment:
+#       DATABASE_URL: postgres://postgres:admin@db-1:5432/projeto
+#     ports:
+#       - "3001:3001"
+#     restart: always
+
+#   frontend:
+#     build: ./client
+#     ports:
+#       - "3000:3000"
+#     restart: always
+
+# volumes:
+#   postgres-data:
+
+version: "3.9"
 services:
-  frontend:
-    build: ./client
+  db:
+    build: .
     ports:
-      - "3000:3000"
-    depends_on:
-      - backend
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: projeto
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -q -d projeto -U postgres"]
+      interval: 10s
+      retries: 5
+
   backend:
     build: ./api
     ports:
@@ -13,15 +79,13 @@ services:
     environment:
       DB_URL: postgresql://postgres:admin@db:5432/projeto
     depends_on:
-      - db
-  db:
-    image: postgres:latest
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: projeto
-    volumes:
-      - ./projeto.sql:/docker-entrypoint-initdb.d/projeto.sql
+      db:
+        condition: service_healthy
 
+  frontend:
+    build: ./client
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+  
